# redprint-worker

./: .env.local.example  .env.worker.example  .gitignore  Dockerfile  README.md  TODOS.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json  vitest.config.ts
docs/: ARCHITECTURE.md  MONITOR_APP.md  OPERATIONS.md  README.md
docs/backup/: railway-verify-db.md  verify-db-schema-ops.md
monitor-app/: generate-tray-icons.js  package-lock.json  package.json
monitor-app/src/: index.html
monitor-app/src-tauri/: Cargo.toml  tauri.conf.json
monitor-app/src-tauri/capabilities/: default.json
monitor-app/src-tauri/src/: config.rs  db.rs  docker.rs  git.rs  main.rs  tray.rs
ops/: register-launchd.sh  unregister-launchd.sh
scripts/: backup-rollout-preflight.ts  backup-rollout-smoke.ts  backup-rollout-status.ts  bootstrap-redprint-schema.sql  export-bootstrap-schema.ts  migrate-backup-logs.sql  run-backup-once.ts  transcode-worker.ts
src/db/: index.ts
tasks/db-backup/: README.md  phase-0-design.md  phase-1-eng-review-test-plan-initial.md  phase-2-eng-review-test-plan-verified-restore.md  phase-3-implementation-plan-verified-backup.md  phase-4-rollout-checklist.md
tests/backup/: backup-logger.test.ts  backup-rollout-preflight.test.ts  backup-rollout-smoke.test.ts  backup-rollout-status.test.ts  backup-scheduler.test.ts  backup-schema-contract.test.ts  backup-uploader.test.ts  backup-verify.test.ts  constants.test.ts  export-bootstrap-schema.test.ts  pg-dump.test.ts  retention.test.ts
tests/transcode/: processor.test.ts  runner.test.ts  (+1 more)
(+67 files in other folders)
